Update personas and prompts configuration for improved LLM response handling
- Enable `llm_relevance_filter` in personas.yaml to enhance document relevance during query processing.
- Revise system prompt in prompts.yaml to provide clearer instructions and formatting rules for generating high-quality, structured answers, including detailed guidelines for various query types and response formatting.

--- a/backend/onyx/seeding/personas.yaml
+++ b/backend/onyx/seeding/personas.yaml
@@ -20,7 +20,7 @@ personas:
     # This feature can be overriden for all personas via DISABLE_LLM_DOC_RELEVANCE env variable
     # Disabling by default since for many deployments, it causes the user to hit rate limits with
     # their LLM provider (e.g. Azure) or causes extremely slow results (Ollama).
-    llm_relevance_filter: false
+    llm_relevance_filter: true
     # Enable/Disable usage of the LLM to extract query time filters including source type and time range filters
     llm_filter_extraction: true
     # Decay documents priority as they age, options are:
