--- a/deployment/data/nginx/app.conf.template
+++ b/deployment/data/nginx/app.conf.template
@@ -68,6 +68,21 @@ server {
         proxy_pass http://api_server;
     }
 
+    # Explicit location for favicon to ensure it's properly served
+    location = /onyx.ico {
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $forwarded_proto;
+        proxy_set_header X-Forwarded-Host $forwarded_host;
+        proxy_set_header X-Forwarded-Port $forwarded_port;
+        proxy_set_header Host $host;
+        proxy_http_version 1.1;
+        proxy_redirect off;
+        proxy_pass http://web_server/onyx.ico;
+        access_log off;
+        expires max;
+    }
+
     location / {
         # misc headers
         proxy_set_header X-Real-IP $remote_addr;
